--- a/index.html
+++ b/index.html
@@ -939,19 +939,19 @@
           <h2 style="margin-bottom: 2.5rem">Our Clients</h2>
           <div class="clients-logos">
             <img
-              src="E:/Shreshta-Technologies-main/Shreshta-Technologies-main/img/logos/Logo_of_Twitter.svg.png"
+              src="./img/logos/Logo_of_Twitter.svg.png"
               alt="Twitter"
             />
             <img
-              src="E:/Shreshta-Technologies-main/Shreshta-Technologies-main/img/logos/volvo.jfif"
+              src="./img/logos/volvo.jfif"
               alt="Volvo"
             />
             <img
-              src="E:/Shreshta-Technologies-main/Shreshta-Technologies-main/img/logos/Synergy_Logo_Thick_Font-01.svg"
+              src="./img/logos/Synergy_Logo_Thick_Font-01.svg"
               alt="Synergy"
             />
             <img
-              src="E:/Shreshta-Technologies-main/Shreshta-Technologies-main/img/logos/ntt data.png"
+              src="./img/logos/ntt data.png"
               alt="NTT Data"
             />
           </div>
